doc: fix .env.example

--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ SECRET_KEY=cpi)&0ak8v$v$it1&nqadilzc8ghvequ3ir-@7(64@^q95gdk3
 DJANGO_ALLOWED_HOSTS=localhost 127.0.0.1 [::1]
 
 # Database
-SQL_ENGINE=django.db.backends.postgresql
+SQL_ENGINE=django.contrib.gis.db.backends.postgis
 SQL_DATABASE=gis
 SQL_USER=alex
 SQL_PASSWORD=password
